Adding metadata and final PDF

--- a/source/tex/reduced_usmc.bib
+++ b/source/tex/reduced_usmc.bib
@@ -1,10 +1,10 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for shawnm at 2022-10-25 21:32:45 +1300 
+%% Created for shawnm at 2022-10-25 21:32:45 +1300
 
 
-%% Saved with string encoding Unicode (UTF-8) 
+%% Saved with string encoding Unicode (UTF-8)
 
 
 @article{means2022,
@@ -27,7 +27,8 @@
 	address = {Department of Physiology, School of Medicine, University of Virginia, Charlottesville 22908.},
 	author = {Hai, C M and Murphy, R A},
 	crdt = {1988/01/01 00:00},
-	date = {1988 Jan},
+	year = {1988},
+	month = {01},
 	date-added = {2022-10-25 21:21:56 +1300},
 	date-modified = {2022-10-25 21:21:56 +1300},
 	dcom = {19880223},
@@ -64,7 +65,8 @@
 	address = {Universit{\'e}de Technologie de Compi{\`e}gne, CNRS UMR 6600, Biomecanique et Bioingenierie, France. jlaforet@utc.fr},
 	author = {Laforet, Jeremy and Rabotti, Chiara and Terrien, Jeremy and Mischi, Massimo and Marque, Catherine},
 	crdt = {2011/10/05 06:00},
-	date = {2011 Dec},
+	year = {2011},
+	month = {12},
 	date-added = {2022-10-05 22:17:41 +1300},
 	date-modified = {2022-10-05 22:17:41 +1300},
 	dcom = {20120313},
@@ -172,7 +174,8 @@
 	author = {Clayton, R H and Bernus, O and Cherry, E M and Dierckx, H and Fenton, F H and Mirabella, L and Panfilov, A V and Sachse, F B and Seemann, G and Zhang, H},
 	copyright = {Copyright {\copyright}2010 Elsevier Ltd. All rights reserved.},
 	crdt = {2010/06/18 06:00},
-	date = {2011 Jan},
+	year = {2011},
+	month = {01},
 	date-added = {2022-10-05 22:08:01 +1300},
 	date-modified = {2022-10-05 22:08:01 +1300},
 	dcom = {20110401},
@@ -211,7 +214,8 @@
 	address = {Dipartimento di Matematica, Universit{\`a}di Pavia, Via Ferrata 1, 27100 Pavia, Italy. colli@imati.cnr.it},
 	author = {Colli Franzone, P and Pavarino, L F and Taccardi, B},
 	crdt = {2005/07/13 09:00},
-	date = {2005 Sep},
+	year = {2005},
+	month = {11},
 	date-added = {2022-10-05 22:06:30 +1300},
 	date-modified = {2022-10-05 22:06:30 +1300},
 	dcom = {20051122},
@@ -247,7 +251,8 @@
 	address = {Department of Biomedical Engineering, Case Western Reserve University, Cleveland, OH 44106-7207.},
 	author = {Luo, C H and Rudy, Y},
 	crdt = {1994/06/01 00:00},
-	date = {1994 Jun},
+	year = {1994},
+	month = {06},
 	date-added = {2022-10-05 22:05:14 +1300},
 	date-modified = {2022-10-05 22:05:14 +1300},
 	dcom = {19940623},
@@ -284,7 +289,8 @@
 	address = {Department of Biomedical Engineering, Case Western Reserve University, Cleveland, Ohio 44106.},
 	author = {Luo, C H and Rudy, Y},
 	crdt = {1991/06/01 00:00},
-	date = {1991 Jun},
+	year = {1991},
+	month = {06},
 	date-added = {2022-10-05 22:04:54 +1300},
 	date-modified = {2022-10-05 22:04:54 +1300},
 	dcom = {19910628},
@@ -320,7 +326,9 @@
 	abstract = {In pregnant rat myometrium, isoproterenol (10(-8) M) inhibited spontaneous contractions without causing hyperpolarization. Isoproterenol (10(-6) M) relaxed the depolarized muscle without affecting the membrane potential. The presence of 80 mM Na+ did not affect the degree of high-K+ depolarization. It was also without any influence on the effects of isoproterenol on the depolarized uterus. The results are consistent with the concept that hyperpolarization is not a prerequisite for beta-adrenoceptor induced relaxation of uterine smooth muscle.},
 	author = {Meisheri, K D and McNeill, J H and Marshall, J M},
 	crdt = {1979/11/23 00:00},
-	date = {1979 Nov 23},
+	year = {1979},
+	month = {11},
+	day = {23},
 	date-added = {2022-10-05 21:58:10 +1300},
 	date-modified = {2022-10-05 21:58:10 +1300},
 	dcom = {19800317},
@@ -357,7 +365,8 @@
 	address = {Division of Biology and Medicine, Brown University, Providence, Rhode Island 02912.},
 	author = {Wilde, D W and Marshall, J M},
 	crdt = {1988/05/01 00:00},
-	date = {1988 May},
+	year = {1988},
+	month = {05},
 	date-added = {2022-10-05 21:56:41 +1300},
 	date-modified = {2022-10-05 21:56:41 +1300},
 	dcom = {19880913},
@@ -431,7 +440,8 @@
 	author = {Atia, Jolene and McCloskey, Conor and Shmygol, Anatoly S and Rand, David A and van den Berg, Hugo A and Blanks, Andrew M},
 	cois = {The authors have declared that no competing interests exist.},
 	crdt = {2016/04/23 06:00},
-	date = {2016 Apr},
+	year = {2016},
+	month = {04},
 	date-added = {2022-10-05 21:37:08 +1300},
 	date-modified = {2022-10-05 21:37:08 +1300},
 	dcom = {20160815},
@@ -471,7 +481,9 @@
 	address = {London Myometrial Group and Division of Pharmacology and Therapeutics, King's College London, St Thomas' Campus, Lambeth Palace Road, London SE1 7EH, UK.},
 	author = {Knock, G A and Smirnov, S V and Aaronson, P I},
 	crdt = {1999/07/27 00:00},
-	date = {1999 Aug 1},
+	year = {1999},
+	month = {08},
+	day = {1},
 	date-added = {2022-10-05 21:34:56 +1300},
 	date-modified = {2022-10-05 21:34:56 +1300},
 	dcom = {19991004},
@@ -541,7 +553,8 @@
 	address = {Department of Oral Physiology, Fukuoka Dental College, Japan. okapi@college.fdcnet.ac.jp},
 	author = {Okabe, K and Inoue, Y and Kawarabayashi, T and Kajiya, H and Okamoto, F and Soeda, H},
 	crdt = {2000/01/29 09:00},
-	date = {1999 Dec},
+	year = {1999},
+	month = {12},
 	date-added = {2022-10-04 19:35:07 +1300},
 	date-modified = {2022-10-04 19:35:07 +1300},
 	dcom = {20000302},
@@ -576,7 +589,9 @@
 	abstract = {We describe a model for the mechanism by which Ca channel inactivation might depend on calcium entry. Ca is assumed to bind to a site at the internal membrane surface to cause inactivation of Ca channels. We assume that Ca that enters through the membrane accumulates in a submembrane compartment and also make simplifying assumptions about Ca buffering and removal. Our model predicts the results of single- and double-pulse voltage-clamp experiments well. The predicted turn-off of Ca current is non-exponential. The model also predicts that procedures that slow inactivation will increase peak Ca current and suggests that both two-phase turn-off of currents and failure of normalized current to recover to 1.0 in two-pulse experiments may be explained without assuming a voltage-dependent component of inactivation or two populations of Ca channels.},
 	author = {Standen, N B and Stanfield, P R},
 	crdt = {1982/12/22 00:00},
-	date = {1982 Dec 22},
+	year = {1982},
+	month = {12},
+	day = {22},
 	date-added = {2022-10-04 19:31:32 +1300},
 	date-modified = {2022-10-04 19:31:32 +1300},
 	dcom = {19830415},
@@ -630,7 +645,9 @@
 	cois = {JT, AB, EP, XZ, AM, OB, CB, SS, AS, LV, AV, BR No competing interests declared},
 	copyright = {{\copyright}2019, Tomek et al.},
 	crdt = {2019/12/24 06:00},
-	date = {2019 Dec 24},
+	year = {2019},
+	month = {12},
+	day = {24},
 	date-added = {2022-10-04 18:36:14 +1300},
 	date-modified = {2022-10-04 18:36:14 +1300},
 	dcom = {20200526},
@@ -672,7 +689,8 @@
 	address = {Division of Bioengineering, National Univ. of Singapore, 9 Engineering Dr. 1, Singapore 117576.},
 	author = {Corrias, Alberto and Buist, Martin L},
 	crdt = {2008/02/16 09:00},
-	date = {2008 Apr},
+	year = {2008},
+	month = {04},
 	date-added = {2022-10-04 18:35:12 +1300},
 	date-modified = {2022-10-04 18:35:12 +1300},
 	dcom = {20080522},
@@ -712,7 +730,9 @@
 	author = {Tong, Wing-Chiu and Choi, Cecilia Y and Kharche, Sanjay and Holden, Arun V and Zhang, Henggui and Taggart, Michael J},
 	cois = {Competing Interests: The authors have declared that no competing interests exist.},
 	crdt = {2011/05/12 06:00},
-	date = {2011 Apr 29},
+	year = {2021},
+	month = {04},
+	day = {04},
 	date-added = {2022-10-04 18:30:43 +1300},
 	date-modified = {2022-10-04 18:30:43 +1300},
 	dcom = {20111128},
@@ -753,7 +773,8 @@
 	address = {CNRS, UMR Biom{\'e}canique et Bio-ing{\'e}nierie, Compi{\`e}gne, France. Sandy.Rihana{\char64}utc.fr},
 	author = {Rihana, Sandy and Terrien, Jeremy and Germain, Guy and Marque, Catherine},
 	crdt = {2009/03/21 09:00},
-	date = {2009 Jun},
+	year = {2009},
+	month = {06},
 	date-added = {2022-10-04 18:29:41 +1300},
 	date-modified = {2022-10-04 18:29:41 +1300},
 	dcom = {20091009},
@@ -791,7 +812,8 @@
 	address = {Department of Biomedical Engineering, Faculty of Engineering, Tel Aviv University, Tel Aviv 69978, Israel. burszty@post.tau.ac.il},
 	author = {Bursztyn, Limor and Eytan, Osnat and Jaffa, Ariel J and Elad, David},
 	crdt = {2007/02/03 09:00},
-	date = {2007 May},
+	year = {2007},
+	month = {05},
 	date-added = {2022-10-04 18:28:48 +1300},
 	date-modified = {2022-10-04 18:28:48 +1300},
 	dcom = {20070621},
@@ -829,7 +851,9 @@
 	address = {MOAC Doctoral Training Centre, University of Warwick, Coventry CV4 7AL, UK. r.e.sheldon@warwick.ac.uk},
 	author = {Sheldon, Rachel E and Baghdadi, Marc and McCloskey, Conor and Blanks, Andrew M and Shmygol, Anatoly and van den Berg, Hugo A},
 	crdt = {2013/07/12 06:00},
-	date = {2013 Sep 6},
+	year = {2013},
+	month = {11},
+	day = {6},
 	date-added = {2022-10-04 18:26:16 +1300},
 	date-modified = {2022-10-04 18:26:16 +1300},
 	dcom = {20140204},
@@ -907,7 +931,8 @@
 	address = {Department of Diagnostic Radiology, Cardiovascular Sciences Research Group, University of Wales College of Medicine, Cardiff CF4 4XN, United Kingdom.},
 	author = {Parthimos, D and Edwards, D H and Griffith, T M},
 	crdt = {1999/09/14 00:00},
-	date = {1999 Sep},
+	year = {1999},
+	month = {11},
 	date-added = {2022-10-04 18:19:13 +1300},
 	date-modified = {2022-10-04 18:19:13 +1300},
 	dcom = {19991018},
@@ -942,7 +967,8 @@
 @article{hodgkinhuxley1952,
 	author = {HODGKIN, A L and HUXLEY, A F},
 	crdt = {1952/08/01 00:00},
-	date = {1952 Aug},
+	year = {1952},
+	month = {08},
 	date-added = {2022-10-04 18:14:33 +1300},
 	date-modified = {2022-10-04 18:14:33 +1300},
 	dcom = {20030501},
@@ -979,7 +1005,8 @@
 	abstract = {Phase space methods and an analog computer are used to analyze the Hodgkin-Huxley non-linear differential equations for the squid giant axon membrane. V is the membrane potential, m the Na(+) activation, h the Na(+) inactivation, and n the K(+) activation. V and m change rapidly, relative to h and n. The (V, m) phase plane of a reduced system of equations, with h and n held constant at their resting values, has three singular points: a stable resting point, a threshold saddle point, and a stable excited point. When h and n are allowed to vary, recovery and refractoriness result from the movement with subsequent disappearance of the threshold and excited points. Multiplying the time constant of n by 100 or more, and that of h by one-third, reproduces the experimental plateau action potentials obtained with tetraethylammonium by Tasaki and Hagiwara, including the phenomena of abolition and of refractoriness of the plateau duration. The equations have, transiently, two stable states, as found in the real axon by these authors. Since the theoretical membrane conductance curves differ significantly from the experimental ones, further experimental analysis of ionic currents with tetraethylammonium is needed to decide whether the Hodgkin-Huxley model can be generalized to explain these experiments completely.},
 	author = {FITZHUGH, R},
 	crdt = {1960/05/01 00:00},
-	date = {1960 May},
+	year = {1960},
+	month = {05},
 	date-added = {2022-10-04 18:11:11 +1300},
 	date-modified = {2022-10-04 18:11:11 +1300},
 	dcom = {19981101},
